# minicbor-sys

./: .gitignore  Cargo.toml
cddl-gen/: Cargo.toml  README.md
cddl-gen/src/: gen.rs  lib.rs  util.rs
cddl-gen/src/__templates__/: cargo.toml.tmpl  lib.rs.tmpl  macros.tmpl
cddl-gen/src/tests/: gen.rs  ivt.rs
cddl-gen/src/tests/cddl/: test.cddl  thing.cddl
cddl-gen/src/tests/expect/: cargo.toml.expect  lib.rs.bindings.expect  lib.rs.expect
examples/c/: Cargo.toml  bindings.h  build.rs  cbindgen.toml  gen_header.sh
examples/c/src/: lib.rs
examples/typescript/: Cargo.toml  LICENSE_MIT  data.cddl
examples/typescript/src/: lib.rs
minicbor/: Cargo.toml
minicbor/src/: lib.rs
src/: gen.rs  ivt.rs  lib.rs  util.rs  validate.rs
src/__templates__/: extra.h.tmpl  lib.rs.tmpl  macros.tmpl
src/tests/: mod.rs  util.rs
src/tests/expect/: cargo.toml.bindings.expect  extra.h.expect  lib.rs.bindings.expect
tests/: mod.rs
