[package]
name = "minicbor-bindgen"
version = "0.1.0"  #:version
authors = ["Thomas Chiantia <thomas@altronix.com>"]
description = "bindings to minicbor"
documentation = ""
homepage = ""
repository = ""
keywords = ["minicbor", "cbor"]
edition = "2021"
exclude=["examples"]

[lib]
path = "src/lib.rs"

[dependencies]
cddl-cat = { git = "https://github.com/ericseppanen/cddl-cat" }
lazy_static = "1.4"
tera = "1.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heck = "0.4"
tracing = "0.1"
# tracing-subscriber = "0.3"
# clap = "4"

[dev-dependencies]
trybuild = "1"
minicbor = { version = "0.19", default-features = false, features = ["derive"]}
serde-big-array = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.4"
