[package]
name = "cddl-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cddl-cat = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
tera = { workspace = true }
serde = { workspace = true }
serde_json =  { workspace = true }
heck = { workspace = true }
tracing = { workspace = true }

# Binary only deps
clap = { workspace = true }
tracing-subscriber = { workspace = true }

# [features]
# bin = ["dep:clap", "dep:tracing-subscriber"]

[lib]
name = "cddl_gen"
path = "src/lib.rs"

# [[bin]]
# name = "cddl-gen"
# path = "src/bin/main.rs"
# required-features = ["bin"]
